--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -5,6 +5,7 @@ header {
   z-index: 10;
   background-color: white;
 }
+
 .page-header {
   width: 100%;
   height: 90px;
@@ -12,49 +13,73 @@ header {
   justify-content: center;
   align-items: center;
 }
+
 .header-container {
   width: 90%;
 }
+
 .header-items {
   display: flex;
   justify-content: space-between;
   align-items: center !important;
 }
+
 .header-left-items {
   display: flex;
   align-items: center;
 }
+
 .header-img {
   width: 66px;
   height: 65px;
+
 }
+
+.header-img2 {
+  width: 45px;
+  height: 50px;
+  display: none;
+}
+
+.header-img2 img {
+  width: 100% !important;
+  height: 100% !important;
+}
+
 .header-img img {
   width: 100% !important;
   height: 100% !important;
 }
+
 .header-title-info {
   margin-left: 10px;
   text-align: left;
   color: #000000;
 }
+
 .header-title {
   font-size: 30px;
   font-weight: bold;
   margin-top: 2px;
 }
+
 .header-title-details {
   font-size: 20px;
   margin-top: -14px;
 }
+
 .header-right-items {
   display: flex;
 }
+
 .header-right-items-inMenu {
   margin-top: 17px;
 }
+
 .rs-drawer-header .rs-drawer-header-close {
   display: none;
 }
+
 .menu-icon {
   display: flex;
   margin-left: 15.33px;
@@ -63,9 +88,11 @@ header {
   color: #000000;
   cursor: pointer;
 }
+
 .menu-notifications {
   position: relative;
 }
+
 .numbers-of-notifications {
   position: absolute;
   font-size: 9.5px;
@@ -79,6 +106,7 @@ header {
   right: -4px;
   top: -4px;
 }
+
 .header-options {
   margin-left: 45px;
   font-size: 18px;
@@ -94,27 +122,80 @@ header {
 .header-title-details-inMenu {
   margin-top: -2px;
 }
+
 /* ////////////////header-responsive/////////////// */
 
 @media screen and (max-width: 540px) {
   .header-options {
     display: none;
   }
-  .header-title {
-    font-size: 23px;
+
+  #inpSearchBoxHeader>div {
+    left: 110px;
   }
+
+  .header-title {
+    font-size: 20px;
+    margin-bottom: 2px;
+  }
+
   .header-title-details {
     font-size: 15px;
     margin-top: -8px;
   }
+
+  .header-title-info {
+    margin-left: 4px;
+  }
+
+  .header-img svg {
+    width: 141px;
+  }
+
+  .header-img {
+    width: 48px;
+  }
+
+  .menu-icon {
+    margin: 0;
+  }
+
+}
+
+#inpSearchBoxHeader {
+  position: relative;
+  width: 300px;
+  margin: "20px auto";
+}
+
+/* #inpSearchBoxHeader>.SearchBoxIcon {
+  position: absolute;
+  display: none;
+} */
+#inpSearchBoxHeader>span {
+  position: absolute;
+  display: block;
+  right: 0;
+  top: 0;
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 429px) {
   .header-title {
     font-size: 20px;
   }
+
   .header-title-details {
     font-size: 12px;
     margin-top: -5px;
+  }
+
+  #inpSearchBoxHeader {
+    font-size: 12px !important;
+    padding: 0 10px;
+  }
+
+  #inpSearchBoxHeader>div {
+    left: 56px;
   }
 }
