--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -173,11 +173,11 @@ header {
   display: none;
 } */
 #inpSearchBoxHeader>span {
-  position: absolute;
+position: absolute;
   display: block;
-  right: 0;
-  top: 0;
-  opacity: 0.8;
+  right: 13px;
+  top: 3px;
+  opacity: 0.6;
 }
 
 @media screen and (max-width: 429px) {
